--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,14 @@
   <body>
    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">REDLAB</a>
+  <a class="navbar-brand" href="/">REDLAB</a>
 
   <!-- Links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
       <a class="nav-link" href="/records">Registros</a></li>
+      <li class="nav-item">
+      <a class="nav-link" href="/visits">Visitas</a></li>
        <li class="nav-item">
       <a class="nav-link" href="/students">Estudiantes</a></li>
        <li class="nav-item">
