--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -4,6 +4,8 @@
 
 </head>
 <body>
+<%=DateTime.now.to_time.to_s[0..-6]%>
+<%=@laboratory.nombre%>
 
 <div id="buttonFile">
 <%= form_tag import_visits_path, multipart: true do%>
@@ -31,7 +33,6 @@
     <th>Hora Registro</th>
     <th>Motivo</th>
     <th>Institución</th>
-    <th>Institución</th>
     </tr>
     <%@visits_day.each do |visit|%>
     <tr>
@@ -40,8 +41,6 @@
      <td><%=visit.created_at.to_s.split(' ')[1]%></td>
      <td><%=visit.motivo%></td>
      <td><%=visit.institucion%></td>
-     <td><%=visit.lab_id%></td>
-
     </tr>
     <%end%>
     </table>  
