--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -30,9 +30,7 @@
     <th>Nombre</th>
     <th>Fecha Registro</th>
     <th>Hora Registro</th>
-    <!--
     <th>Tipo</th>
-    ---->
     <th>Matriculado</th>
     </tr>
     <%@records_day.each do |record|%>
@@ -40,13 +38,11 @@
     <td><%=record.student.nombre%></td>
      <td><%=record.created_at.to_s.split(' ')[0]%></td>
     <td><%=record.created_at.to_s.split(' ')[1]%></td>
-    <!--
-    <%if record.student.status%>
+    <%if record.tipo == 't'%>
       <td><%='Ingreso'%></td>
     <%else%>
       <td><%='Salida'%></td>
     <%end%>
-    --->
     <% if record.student.laboratories.ids.include?(@laboratory.id)%>
         <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
       <%else%>
@@ -66,9 +62,7 @@
       <th>Nombre</th>
       <th>Fecha Registro</th>
       <th>Hora Registro</th>
-       <!----
       <th>Tipo</th>
-      ----->
       <th>Matriculado</th>
       </tr>
       <%@records_week.each do |record|%>
@@ -76,13 +70,11 @@
       <td><%=record.student.nombre%></td>
       <td><%=record.created_at.to_s.split(' ')[0]%></td>
       <td><%=record.created_at.to_s.split(' ')[1]%></td>
-      <!----
-      <%if record.student.status%>
+      <%if record.tipo == 't'%>
       <td><%='Ingreso'%></td>
       <%else%>
       <td><%='Salida'%></td>
       <%end%>
-      ----->
       <% if record.student.laboratories.ids.include?(@laboratory.id)%>
         <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
       <%else%>
@@ -98,9 +90,7 @@
       <th>Nombre</th>
       <th>Fecha Registro</th>
       <th>Hora Registro</th>
-      <!--
       <th>Tipo</th>
-      -->
       <th>Matriculado</th>
       </tr>
       <%@records_month.each do |record|%>
@@ -108,13 +98,11 @@
       <td><%=record.student.nombre%></td>
       <td><%=record.created_at.to_s.split(' ')[0]%></td>
       <td><%=record.created_at.to_s.split(' ')[1]%></td>
-      <!--
-       <%if record.student.status%>
+      <%if record.tipo == 't'%>
       <td><%='Ingreso'%></td>
       <%else%>
       <td><%='Salida'%></td>
        <%end%>
-      --->
       <% if record.student.laboratories.ids.include?(@laboratory.id)%>
         <td><i class="material-icons" style="font-size:28px;color:blue">check</i></td>
       <%else%>
