Usuario linkeable en ranking

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -139,7 +139,7 @@ Usuarios en laboratorio:
     </tr>
     <%@students.each do |s|%>
     <tr>
-    <td><%=s.nombre%></td>
+    <td><%=link_to s.nombre, s%></td>
     <td><%=s.records.count%></td>
     </tr>
     <%end%>
