--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -16,7 +16,7 @@
 <%=@laboratory.nombre%>
  <%@records_day.each do |record|%>
  <%record.student.status%>
- <%record.student.status == true>
+ <%record.student.status == true%>
  <%if record.student.status == true%>
       <%activos+=1%>
  <%else%>
