--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -25,7 +25,7 @@
 <%usuarios = activos-inactivos%>
 Usuarios en laboratorio:
 <%if usuarios < 0%>
-<%=0 %> <%"Redundancias de salidas"%>
+<%=0 %> <%="Redundancias de salidas"%>
 <%else%>
 <%=activos-inactivos%>
 <%end%>
