inscripción de estudiantes desde totem, rut en vez de nalum

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
     <th>ID</th>
     <th>Nombre</th>
-    <th>Número de Alumno</th>
+    <th>RUN</th>
     <th>Situación Acadámica</th>
     <th>Correo UC</th>
     </tr>
@@ -20,7 +20,7 @@
     <tr>
     <td><%=student.id%></td>
     <td><%=link_to student.nombre, student%></td>
-    <td><%=student.nalumno%></td>
+    <td><%=student.rut%></td>
     <td><%=student.sit_academica%></td>
     <td><%=student.correo%></td>
     <%end%>
