--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
        <li class="nav-item">
       <a class="nav-link" href="/students/new">Inscribir Estudiante</a></li>
   <!-- Button Session-->
-      <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete ,:class =>"btn navbar-btn btn-danger" %>
+      <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
         <% else %>
           <%= link_to "Ingresar", new_user_session_path , :class =>"btn btn-outline-success" %>
        <% end %>
