--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,10 +1,20 @@
-<% if flash[:notice] %>
-    <div class="alert success">
-		      <input type="checkbox" id="alert1"/>
-          <label class="close" title="close" for="alert1">
-           <i class="icon-remove"></i>x
-          </label>
-	      	<p class="inner">
-		    	<strong><%= flash[:notice] %></strong></p>
-          </div>
-    <% end %>
+
+
+
+<div class="container">
+<% if flash[:warning]%>
+<div class="alert alert-warning alert-dismissible">
+  <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+ <strong><%= flash[:warning] %></strong> Debes iniciar sesión.
+  <% end %>
+</div>
+</div>
+<div class="container">
+
+<% if flash[:notice]%>
+<div class="alert alert-notice alert-dismissible">
+  <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+ <strong><%= flash[:notice] %></strong> 
+  <% end %>
+</div>
+</div>
