--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -5,7 +5,7 @@
 <% if flash[:warning]%>
 <div class="alert alert-warning alert-dismissible">
   <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
- <strong><%= flash[:warning] %></strong> Debes iniciar sesión.
+ <strong><%= flash[:warning] %></strong> No tienes permisos para acceder a la página.
   <% end %>
 </div>
 </div>
