background order and new admins system

--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,6 +1,4 @@
-
-
-
+<body>
 <div class="container">
 <% if flash[:warning]%>
 <div class="alert alert-warning alert-dismissible">
@@ -9,8 +7,8 @@
   <% end %>
 </div>
 </div>
-<div class="container">
 
+<div class="container">
 <% if flash[:notice]%>
 <div class="alert alert-notice alert-dismissible">
   <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -18,3 +16,4 @@
   <% end %>
 </div>
 </div>
+</body>
