--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
   color: #333;
+  background-color: #ffffff;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -20,7 +20,7 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #ffffff;
 
   &:visited {
     color: #666;
@@ -28,7 +28,7 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: #ffffff;
   }
 }
 
