--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+h2{
+    padding-bottom: 20px;
+    padding-top: 40px;
+    text-align: center;
+
+}
+
+h1{
+    padding-bottom: 20px;
+    padding-top: 40px;
+}
