--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,17 +4,14 @@
     <title>APPRegister</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <div class="container-fluid">
   <a class="navbar-brand" href="/">REDLAB</a>
-
-  <!-- Links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
     <% if signed_in? %>
@@ -27,6 +24,7 @@
       <a class="nav-link" href="/students/new">Inscribir Estudiante</a></li>
       <% if can? :manage, Laboratory %>
       <a class="nav-link" href="/laboratories">Administrar Labs</a></li>
+      <a class="nav-link" href="/admin/users">Administrar Usuarios</a></li>
       <% end %>
   <!-- Button Session-->
       <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
@@ -34,6 +32,7 @@
           <%= link_to "Ingresar", new_user_session_path , :class =>"btn btn-outline-success" %>
        <% end %>
     </ul>  
+</div>
 </div>
   </nav> 
     <%= yield %>
