--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,5 +1,16 @@
-<body>
-<div class="container">
+<style>
+h2 {
+  color: white;
+  text-shadow:
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
+}
+</style>
+
+<body style="background-image: url('http://centrodeinnovacion.uc.cl/assets/uploads/2019/07/48252133732_e7f5d0d4ce_k-1280x605-c-default.jpg'); background-repeat: no-repeat; background-size: cover;background-attachment: fixed;  >
+<div class="container" style="padding-top:40px;">
 <% if flash[:warning]%>
 <div class="alert alert-warning alert-dismissible">
   <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -7,7 +18,6 @@
   <% end %>
 </div>
 </div>
-
 <div class="container">
 <% if flash[:notice]%>
 <div class="alert alert-notice alert-dismissible">
@@ -15,5 +25,10 @@
  <strong><%= flash[:notice] %></strong> 
   <% end %>
 </div>
+</div>
+<div class ="text-center" style="padding-top:200px">
+<h2>RED DE LABORATORIOS DE FABRICACIÓN UC</h2>
+
+
 </div>
 </body>
