--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,3 +1,52 @@
+<style>
+* {
+  box-sizing: border-box;
+}
+
+input[type=text], select, textarea {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+.container {
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.col-25 {
+  float: left;
+  width: 10%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 55%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+</style>
 <%= form_with(model: student, local: true) do |form| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
@@ -10,34 +59,68 @@
       </ul>
     </div>
   <% end %>
-  
-  <%= form.label :rfid %>
-  <div>
-    <%= form.text_field:rfid %>
-  </div>
-  <%= form.label :rut %>
-   <div>
-    <%= form.text_field:rut %>
-  </div>
-  <%= form.label :nombre %>
-  <div>
-    <%= form.text_field :nombre %>
-  </div>
-  <%= form.label :nalumno %>
-  <div>
-    <%= form.text_field :nalumno %>
-  </div>
-  <%= form.label :sit_academica %>
-  <div>
-    <%= form.text_field :sit_academica %>
-  </div>
-  <%= form.label :correo %>
-  <div>
-    <%= form.text_field :correo %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "Guardar"%>
+  <div class="container">
+  <div class="row">
+    <div class="col-25">
+     Código <%= form.label :rfid %>
+    </div>
+    <div class="col-75">
+      <%= form.text_field:rfid %>
+      <%= form.label :rut %>
+      <%= form.text_field:rut %>
+    </div>
   </div>
   </div>
+ 
+   <div class="container">
+  <div class="row">
+    <div class="col-25">
+     <%= form.label :nombre %>
+    </div>
+    <div class="col-75">
+      <%= form.text_field:nombre %>
+    </div>
+  </div>
+  </div>
+   <div class="container">
+  <div class="row">
+    <div class="col-25">
+     <%= form.label :nalumno %>
+    </div>
+    <div class="col-75">
+      <%= form.text_field:nalumno %>
+    </div>
+  </div>
+  </div>
+   <div class="container">
+  <div class="row">
+    <div class="col-25">
+    <%= form.label :sit_academica%>
+    </div>
+    <div class="col-75">
+      <%= form.select :sit_academica, options_for_select([["Seleccionar", ""], "Vigente", "Ex-Alumno", "Adminstrativo"])%>
+    </div>
+  </div>
+  </div>
+   <div class="container">
+  <div class="row">
+    <div class="col-25">
+     <%= form.label :correo%>
+    </div>
+    <div class="col-75">
+      <%= form.text_field:correo %>
+    </div>
+  </div>
+  </div>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-25">
+     <%= form.submit "Guardar", :class => "btn-primary"%>
+    </div>
+    <div class="col-75">
+    <%= link_to 'Volver', students_path %>
+    </div>
+    
+  </div>
+</div>
 <% end %>
