--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <a class="navbar-brand" href="/">REDLAB</a>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
+    <a class="nav-link" href="/flayers">Administrar Flayers</a></li>
     <% if signed_in? %>
       <a class="nav-link" href="/records">Registros</a></li>
       <li class="nav-item">
