--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,17 +17,27 @@
     <a class="nav-link" href="/flayers">Administrar Flayers</a></li>
     <% if signed_in? %>
       <a class="nav-link" href="/records">Registros</a></li>
-      <li class="nav-item">
-      <a class="nav-link" href="/visits">Visitas</a></li>
        <li class="nav-item">
       <a class="nav-link" href="/students">Estudiantes</a></li>
-       <li class="nav-item">
-      <a class="nav-link" href="/students/new">Inscribir Estudiante</a></li>
+       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Más
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fdb515;">
+          <a class="dropdown-item" href="/visits">Visitas</a>
+          <a class="dropdown-item" href="/students/new">Inscribir Estudiante</a>
+        </div>
+      </li>
       <% if can? :manage, Laboratory %>
-      <a class="nav-link" href="/laboratories">Administrar Labs</a></li>
-      <a class="nav-link" href="/admin/users">Administrar Usuarios</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Admin
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown2" style="background-color: #fdb515;">
+      <a class="dropdown-item"  href="/laboratories">Administrar Labs</a>
+      <a class="dropdown-item" href="/admin/users">Administrar Usuarios</a>
       <% end %>
-  <!-- Button Session-->
+      </li>
       <%= link_to "Cerrar Laboratorio", button_path, method: :get ,:class =>"btn navbar-btn btn-danger" %>
         <% else %>
           <%= link_to "Ingresar", new_user_session_path , :class =>"btn btn-outline-secondary"%>
