cambios minimos, database usuario comentadogit add .

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,6 +3,14 @@
 
 <h2>Estudiantes:</h2>
 
+<div class="container">
+<% if flash[:notice]%>
+<div class="alert alert-notice alert-dismissible">
+  <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+ <strong><%= flash[:notice] %></strong> 
+  <% end %>
+</div>
+
 <body>
  <table class="table">
   <thead>
